# ruff-tools

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml  minimal_cycles.py
.github/workflows/: ci.yaml  release.yml
reference/: README.md  cyclic_dependencies.py  minimal_cycles.py  ruff_importlinter.py
src/: cycle_detection.rs  live.rs  main.rs  minimal_cycles.rs  minimize_cycles.rs  ruff_util.rs
