[package]
name = "ruff-tools"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = " A collection of powerful tools built on top of Astral's ruff"
homepage = "https://github.com/purajit/ruff-tools"
documentation = "https://github.com/purajit/ruff-tools"
repository = "https://github.com/purajit/ruff-tools"
authors = ["Purajit Malalur"]
license = "MIT"

[dependencies]
# ini = "1.3.0"
notify = "8.0.0"
regex = "1.11.1"
serde_json = "1.0.134"
structopt = "0.3.26"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.27.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
