[package]
name = "ruff-tools"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = " A collection of powerful tools built on top of Astral's ruff"
homepage = "https://github.com/purajit/ruff-tools"
documentation = "https://github.com/purajit/ruff-tools"
repository = "https://github.com/purajit/ruff-tools"
authors = ["Purajit Malalur"]
license = "MIT"

[dependencies]
# ini = "1.3.0"
notify = "8.0.0"
regex = "1.11.1"
serde_json = "1.0.134"
structopt = "0.3.26"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
